# SIMA

./: .gitignore  Cargo.toml  LICENSE  README.md
sima-cli/: Cargo.toml
sima-cli/src/: main.rs
sima-init/: Cargo.toml
sima-init/src/: config.rs  error.rs  ipc.rs  logger.rs  main.rs  service.rs
sima-proto/: Cargo.toml
sima-proto/src/: lib.rs
tests/: shell.yml  sima.yml
tests/sima.d/: shell.yml  terminal.yml
xtask/: Cargo.toml
xtask/src/: main.rs
