[package]
name = "sima-init"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
figlet-rs = "0.1.5"
platform-info = "2.0.5"
serde_yaml = "0.9.34"
spdlog-rs = "0.5.2"

[dependencies.nix]
version = "0.31.1"
features = ["signal", "process", "reboot"]

[dependencies.sima-proto]
path = "../sima-proto"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.tokio]
version = "1.49.0"
features = ["rt-multi-thread", "macros", "process", "signal", "sync", "time", "net", "io-util"]
